@@ -150,4 +150,16 @@ class Emails extends BumActiveRecord
 			'criteria'=>$criteria,
 		));
 	}*/
+    
+    /**
+     * Update some datatime statistical fields.
+     */
+    public function beforeSave() {
+        if(!Yii::app()->getModule('bum')->db_triggers){
+            if($this->isNewRecord){
+                $this->date_of_creation = new CDbExpression('NOW()');
+            }
+        }
+        return parent::beforeSave();
+    }    
 }
