@@ -178,4 +178,16 @@ class Settings extends BumActiveRecord
 			'criteria'=>$criteria,
 		));
 	}
+    
+    /**
+     * Update some datatime statistical fields.
+     */
+    public function beforeSave() {
+        if(!Yii::app()->getModule('bum')->db_triggers){
+            if(!$this->isNewRecord){
+                $this->date_of_update = new CDbExpression('NOW()');
+            }
+        }
+        return parent::beforeSave();
+    }    
 }
